# QuranBot

./: .env.example  .gitignore  CHANGELOG.md  DATA_SOURCES.md  LICENSE  README.ar.md  README.en.md  README.md  TECHNICAL.md  TODO.md  audio.py  bot.py  bot_app.py  bot_handlers.py  bot_router.py  cli.py  config.py  data.py  database.py  downloader.py  gitCommits.md  lang.py  main.py  nlu.py  pyproject.toml  requirements.txt  search.py  shell.py  start.py  tafsir.py  todo.md  utils.py  v.json  v.py  va.py  verify_nlu.py  video.py  video_cli.py  video_gui.py
.github/workflows/: ci.yml
core/: __init__.py  audio.py  data.py  database.py  downloader.py  hadith.py  image.py  lang.py  mushaf.py  nlu.py  queue.py  search.py  settings.py  subtitles.py  tafsir.py  utils.py  verses.py  video.py
core/video_templates/: __init__.py  default.py  enhanced.py
data/: hafs_pages.json  quran-data.json
data/metadata/: quran-data.js  text-sources.json  voices.json
data/text/: quran-uthmani.txt
docs/: CHANGELOG.md  README.ar.md  README.md  TECHNICAL.md
locales/: ar.json  en.json  fr.json  id.json  tr.json  ur.json
scripts/: gen_posts.py
tests/: conftest.py  test_data.py  test_search.py  test_subtitles.py  test_wrap.py
tools/: video_cli.py  video_gui.py
