[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quranbot"
version = "0.1.0"
description = "Quran toolkit with Telegram bot and desktop video generation tools."
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot[job-queue]>=21.3",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.22.1",
    "rapidfuzz>=3.0.0",
    "Pillow>=10.0.0",
    "json5",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools]
py-modules = ["bot", "bot_handlers", "bot_router", "bot_app", "video_cli", "video_gui", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "W", "I", "E"]
# E402: intentional lazy imports (circular-import avoidance) are everywhere.
# E501: line-length is not enforced in this codebase (legacy long lines).
# E701/E702: one-line compound statements — stylistic, pervasive in this codebase.
# E722: bare except — tracked as tech-debt; not auto-changed in this pass.
ignore = ["E402", "E501", "E701", "E702", "E722"]
